[package]
authors = ["Okko Hakola <okkohakola@gmail.com>"]
categories = ["gui", "game-development"]
description = "Vulkano Backend for Bevy"
edition = "2021"
homepage = "https://github.com/hakolao/bevy_vulkano"
keywords = ["gui", "imgui", "vulkano", "gamedev", "bevy"]
license = "Apache-2.0"
name = "bevy_vulkano"
readme = "README.md"
repository = "https://github.com/hakolao/bevy_vulkano"
version = "0.9.1"

[features]
clipboard = ["gui", "egui_winit_vulkano/clipboard"]
default = []
example_has_gui = ["gui", "links", "clipboard"]
gui = ["egui_winit_vulkano"]
links = ["gui", "egui_winit_vulkano/links"]

[dependencies]
approx = "0.5.1"
egui_winit_vulkano = {version = "0.21.0", optional = true, default_features = false, features = []}
image = "0.24.4"
raw-window-handle = "0.5"
vulkano = {git = "https://github.com/raycar5/vulkano", branch = "master"}
vulkano-shaders = {git = "https://github.com/raycar5/vulkano", branch = "master"}
vulkano-util = {git = "https://github.com/raycar5/vulkano", branch = "master"}
winit = "0.27"

[dependencies.bevy]
default-features = false
features = []
version = "0.9.1"

[dev-dependencies]
anyhow = "1.0.66"
bytemuck = "1.12.3"
rand = "0.8.5"
